# ADeus

./: .all-contributorsrc  .gitignore  .gitmodules  .prettierignore  LICENSE  README.md  TODO  TODO.md  prettier.config.cjs
.github/workflows/: pages.yml
app/: .eslintrc.json  capacitor.config.ts  components.json  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts
app/android/: capacitor.settings.gradle
app/android/app/: build.gradle  capacitor.build.gradle
app/ios/App/: Podfile
app/src/components/: .ChatLog.tsx.swp  Chat.tsx  ChatDots.tsx  ChatLog.tsx  ConversationHistory.tsx  Layout.tsx  LoadingSpinner.tsx  LoginForm.tsx  LogoutButton.tsx  ModelProvider.tsx  NavMenu.tsx  NewConversationButton.tsx  NewConversationMenuBar.tsx  PromptForm.tsx  Prose.tsx  SettingsDialog.tsx  SideMenu.tsx  ThemeProvider.tsx  ThemeToggle.tsx  chatsHistory.tsx  loginRequired.tsx
app/src/pages/: _app.tsx  _document.tsx  connect.tsx  index.tsx  login.tsx  setup.tsx
app/src/styles/: globals.css
app/src/utils/: range.ts  useSupabaseConfig.tsx
backend/fastapi_local_ollama/: database.py
backend/supabase/: config.toml
device_coralai/: CMakeLists.txt  ca-certificates.crt  checkOutput.py  main.cc
devices/computer/: run_client.py
devices/coralai/: CMakeLists.txt  README.md  checkOutput.py  main.cc
devices/esp32/: testHTTP.ino  testI2S.ino
devices/esp32-c3/: CMakeLists.txt  README.md  sdkconfig  sdkconfig.defaults  sdkconfig.old
devices/raspipico/: CMakeLists.txt  README.md  main.c  pico_sdk_import.cmake
devices/raspizerow/: CMakeLists.txt  README.md  compile.sh  install.sh  main.cpp  main.py  main1.cpp  maingpio.cpp  mysetup.sh  setup.sh  setup1.sh
devices/raspizerow/I2s/: README.md  main.cpp  robust-main.cpp  setup.sh
devices/reactnative/: App.tsx  app.json  package.json
devices/xiao-nrf52840/: main.ino
docs/: CNAME  Gemfile  _config.yml  getting_started.md  index.md  python_recorder_client.md  sequence.md  setup_app.md  setup_raspberry_pi_zero.md  setup_supabase.md  start_contributing.md  troubleshoot.md
docs/archive/: archive.md  launch_readme.md  setup_coralai.md
docs/guides/: assemble_hardware.md  esp32-c3.md  guides.md  make_db_migration.md  ollama_ngrok_setup.md  sequence.md  setup_raspberry_pi_zero.md  use_python_recorder.md
docs/how-to/: setup_app.md  setup_coralai.md  setup_raspberry_pi_zero.md  setup_supabase.md  start_contributing.md  use_python_recorder.md
docs/setup/: index.md  setup.md  setup_app.md  setup_coralai.md  setup_raspberry_pi_zero.md  setup_supabase.md  test.md  use_python_recorder.md
scripts/managed/: new_accnt.py  requirements.txt
scripts/python_recorder_client/: .gitignore  main.py  requirements.txt
scripts/wav_over_serial/: main.py  requirements.txt
server/: api.py  requirements.txt
supabase/: schema.sql
supabase/migrations/: 20240214211830_remote_schema.sql  20240220222742_remote_schema.sql  20240225224922_remote_schema.sql  20240326142114_remote_schema.sql
(+37 files in other folders)
